Fix icons on mobile

--- a/styles.css
+++ b/styles.css
@@ -102,7 +102,7 @@ a.bump {
 }
 
 .links li {
-    display: block;
+    display: inline-block;
     margin-bottom: 12px
 }
 
@@ -122,3 +122,14 @@ a.bump {
     height: 25px;
     fill: white;
 }
+
+.hvr-grow {
+    display: inline-block;
+    vertical-align: middle;
+    transform: translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    backface-visibility: hidden;
+    -moz-osx-font-smoothing: grayscale;
+    transition-duration: 0.3s;
+    transition-property: transform;
+} 
